provision/k8s/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/worker: worker
      securityContext:
        fsGroup: 1000
      containers:
        - name: gitea
          image: gitea/gitea:1.22.6-rootless
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          volumeMounts:
            - name: gitea-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /api/v1/version
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/version
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-config-init
          configMap:
            name: gitea-inline-config
