provision/k8s/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: ssh
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
