provision/k8s/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitea.colt.chalko.com
        - gitea.colt.internal
      secretName: colt-chalko-wildcard-tls
  rules:
    - host: gitea.colt.chalko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
    - host: gitea.colt.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
    - http:
        paths:
          - path: /colt
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
